// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrSelectableSurfaceLayout > orientation test > shows horizontal 1`] = `
<div
  class="cdr-selectable-surface-layout cdr-selectable-surface-layout--horizontal"
>
  <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
  
  
</div>
`;

exports[`CdrSelectableSurfaceLayout > orientation test > shows vertical 1`] = `
<div
  class="cdr-selectable-surface-layout cdr-selectable-surface-layout--vertical"
>
  <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
  
  
</div>
`;

exports[`CdrSelectableSurfaceLayout > snapshot test > renders correctly 1`] = `
<div
  class="cdr-selectable-surface-layout cdr-selectable-surface-layout--horizontal"
>
  <!-- @slot Where all default content should be placed.
      Elements are placed within a flex box. -->
  
  
</div>
`;
